--- a/sgll_trainer.plist
+++ b/sgll_trainer.plist
@@ -39,9 +39,9 @@
                 <key>kind</key>
                  <string>software</string>
                 <key>subtitle</key>
-                 <string>╫ла╥╟Ф</string>
+                 <string>Ф∙≥Г╩┐Г┴┬</string>
                 <key>title</key>
-                 <string>едедя╖Ё╣╫ла╥╟Ф</string>
+                 <string>Ф▀█Ф▀█Е╜╕Х╫╕Ф∙≥Г╩┐Г┴┬</string>
              </dict>
          </dict>
      </array>
