--- a/sgll_trainer.plist
+++ b/sgll_trainer.plist
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
- <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
- <plist version="1.0">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
  <dict>
      <key>items</key>
      <array>
@@ -46,4 +46,4 @@
          </dict>
      </array>
  </dict>
- </plist>?
+</plist>
