--- a/sgll.plist
+++ b/sgll.plist
@@ -13,6 +13,22 @@
 					<key>url</key>
 					<string>http://120.76.184.175/manager/download/DGFDSStudent.ipa</string>
 				</dict>
+				<dict>
+                   <key>kind</key>
+                    <string>full-size-image</string>
+                    <key>needs-shine</key>
+                    <false/>
+                     <key>url</key>
+                     <string>http://www.paipaixueche.com/logo.png</string>
+                </dict>
+                <dict>
+                    <key>kind</key>
+                   <string>display-image</string>
+                    <key>needs-shine</key>
+                     <false/>
+                   <key>url</key>
+                    <string>http://www.paipaixueche.com/logo.png</string>
+                </dict>
 			</array>
 			<key>metadata</key>
 			<dict>
